c/examples/writing-a-c-compiler-tests/tests/chapter_7/valid/extra_credit/compound_subtract_in_block.c
int main(void) {
    int a = 5;
    if (a > 4) {
        a -= 4;
        int a = 5;
        if (a > 4) {
            a -= 4;
        }
    }
    return a;
}