c/examples/writing-a-c-compiler-tests/tests/chapter_7/invalid_semantics/double_define.c
int main(void) {
    {
        int a;
        int a;
    }
}
